# ai-mietverwalter

./: .gitignore  README.md  claude.md
.claude/: tasks.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  dependencies.py
backend/app/data/: mietspiegel.json
backend/app/models/: extraction.py
backend/app/routers/: deadlines.py  documents.py  export.py  extract.py  mietspiegel.py  units.py  upload.py
backend/app/services/: excel_export.py
backend/app/services/ai/: extract.py
backend/app/services/ai/prompts/: extract_lease.py
backend/app/services/ocr/: pipeline.py
backend/app/utils/: deadline_generator.py  rent_calculator.py
docs/: ai-pipeline.md  architecture.md  data-model.md  design-system.md  product-vision.md
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/: export-dialog.tsx  mietspiegel-widget.tsx  unit-edit-dialog.tsx
frontend/src/components/brand/: logo.tsx
frontend/src/components/documents/: extraction-review.tsx  (+1 more)
frontend/src/types/: api.ts
supabase/: config.toml  schema_full.sql
supabase/migrations/: 0001_initial_schema.sql  0002_properties_units.sql  0003_tenants_leases.sql  0004_rent_adjustments.sql  0005_documents.sql  0006_deadlines_legal.sql  0007_rent_index_views.sql
test-fixtures/: mietvertrag_bauer.txt  mietvertrag_bauer_festmiete.txt  mietvertrag_hoffmann_staffelmiete.txt  mietvertrag_wagner_indexmiete.txt
(+27 files in other folders)
