[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "mistralai>=1.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "resend>=2.30.1",
    "stripe>=15.2.0",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
